# mastery-engine

./: .gitignore  SPEC.md  pyproject.toml
curricula/canine-behavior-and-training-20260510-becd/: Glossary.md  INDEX.md  Overview.md
curricula/canine-behavior-and-training-20260510-becd/Foundations/: 01-foundations-01-practice.md  (+18 more)
curricula/computer-systems-and-hardware-and-system-20260322-5763/: Glossary.md  INDEX.md  Overview.md
curricula/culinary-fundamentals-and-food-science-20260324-ea2a/: Glossary.md  INDEX.md  Overview.md
curricula/home-building-maintenance-and-repair-20260324-fcd8/: Glossary.md  INDEX.md  Overview.md
curricula/software-engineering-systems-design-20260322-f2b3/: Glossary.md  INDEX.md  Overview.md
curricula/software-engineering-with-ai-and-ai-engi-20260323-9f1e/: Glossary.md  INDEX.md  Overview.md
curricula/spanish-language-and-conjugation-20260324-87bd/: Glossary.md  INDEX.md  Overview.md
curricula/world-history-20260327-5f23/: Glossary.md  INDEX.md  Overview.md
mastery_engine/: cli.py  config.py  llm_router.py  logging_utils.py  models.py  orchestrator.py  prompts.py  retry.py  state.py  user_config.py  validation.py
mastery_engine/adapters/: claude_adapter.py  claude_code_adapter.py  gemini_adapter.py  local_adapter.py  openai_adapter.py  workspace_adapter.py
pwa/: README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
pwa/src/: App.tsx  index.css  main.tsx
tests/: test_adapters.py  test_llm_router.py  test_prompts.py  test_retry.py  test_state.py  test_validation.py  test_workflow.py
(+506 files in other folders)
